--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.jpa.hibernate.ddl-auto = none
 spring.datasource.url = jdbc:mysql://localhost:3306/mapCsv
 spring.datasource.username = root
 spring.datasource.password = root
+
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
